--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,23 +1,24 @@
 server:
-  port: 8060
+  port: 8081
 
 spring:
   datasource:
-    username: root
-    password: 123456
-    url: jdbc:mysql://62.234.111.74/uchain?useSSL=false&characterEncoding=utf-8
+    username: debian-sys-maint
+    password: 2SCwTeJ6QQp1UxTO
+    url: jdbc:mysql://localhost:3306/uchain?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone = GMT
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
-        # 初始化大小，最小，最大
-        initial-size: 5
-        min-idle: 5
-        max-active: 50
-        # 获取连接等待超时的时间
-        max-wait: 60000
-        # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
-        time-between-eviction-runs-millis: 60000
-        # 配置一个连接在池中最小生存的时间，单位是毫秒
-        min-evictable-idle-time-millis: 300000
+      # 初始化大小，最小，最大
+      initial-size: 5
+
+      min-idle: 5
+      max-active: 50
+      # 获取连接等待超时的时间
+      max-wait: 60000
+      # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+      time-between-eviction-runs-millis: 60000
+      # 配置一个连接在池中最小生存的时间，单位是毫秒
+      min-evictable-idle-time-millis: 300000
 
 jwt:
   secret: workover_experts
@@ -29,7 +30,12 @@ jwt:
 #mybatis
 mybatis:
   mapper-locations: classpath:mappers/*.xml
-  type-aliases-package: com.swpu.cins.workover.entity
+  type-aliases-package: com.swpu.uchain.community.entity
   configuration:
     map-underscore-to-camel-case: true
     use-generated-keys: true
+  spring:
+    servlet:
+      multipart:
+        max-file-size: 20MB
+        max-request-size: 20MB
